# astratomic

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  rust-toolchain
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
assets/: atoms.ron  gen.ron
src/: actors.rs  animation.rs  atom.rs  camera.rs  chunk.rs  chunk_group.rs  chunk_manager.rs  consts.rs  debug.rs  geom_tools.rs  grid.rs  grid_api.rs  input.rs  main.rs  manager_api.rs  materials.rs  menu.rs  particles.rs  player.rs  player_inv.rs  puffin_plugin.rs  rigidbody.rs
