[package]
name = "astratomic"
description = "A 2D survival game"
version = "0.0.1"
edition = "2021"
license     = "PolyForm NonCommercial v1.0"
default-run = "astratomic"

[dependencies]
bevy = "0.12"
bevy-inspector-egui = "0.22"
rand = { version = "0.8.5", features = ["small_rng"] }
fastrand = "2.0.1"
atomicell = "0.2.0"
async-channel = "2.1.0"
smallvec = "1.11.2"
itertools = "0.12.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_dylib = "0.12.1"

[profile.release]
codegen-units = 1
lto           = true

[build-dependencies]
shadow-rs = "0.25.0"
