[package]
name = "astratomic"
description = "A 2D survival game"
version     = "0.2.0"
edition     = "2021"
license     = "PolyForm NonCommercial v1.0"
default-run = "astratomic"

[dependencies]
bevy                = {version = "0.13", features =["file_watcher"]}
bevy-inspector-egui = "0.23"
rand                = { version = "0.8", features = ["small_rng"] }
fastrand            = "2.0"
async-channel       = "2.1"
smallvec            = "1.12"
itertools           = "0.12"

serde               = "1.0"
serde_derive        = "1.0"
bincode             = "1.3"
serde-big-array     = "0.5"
ron                 = "0.8"
bevy-async-task     = "1.4"

contour = "0.12"
bevy_rapier2d = { version = "0.25", features = [ "simd-stable", "debug-render-2d", "parallel" ] }
geo = "0.28"
rotsprite = "0.1"

egui                = "0.25"
bevy_egui           = "0.25"
puffin              = "0.19"
puffin_egui         = "0.26"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_dylib = "0.13"

# Optimize dependencies even in development
[profile.dev.package."*"]
codegen-units = 1
debug         = 1 # Only keep line numbers
opt-level     = 3

# Optimize our code a little bit.
[profile.dev]
codegen-units = 256
opt-level     = 1

[profile.dev-optimized]
debug     = 1
inherits  = "dev"
opt-level = 3

[profile.release]
codegen-units = 1    # Improved rapier physics perf, so it might help other stuff, too
lto           = true
